<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:padding="20dp"
android:background="@drawable/back">

<Button
    android:id="@+id/btn_single_player"
    android:layout_marginTop="50dp"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:text="@string/single"
    android:textSize="20sp"
    android:onClick="buttonsClick"
    android:layout_gravity="center"
    android:background="@drawable/buttonstyle"/>
<Button
    android:id="@+id/btn_double_player"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:text="@string/Double"
    android:textSize="20sp"
    android:onClick="buttonsClick"
    android:layout_marginTop="10dp"
    android:layout_gravity="center"
    android:background="@drawable/buttonstyle"/>
<Button
    android:id="@+id/btn_Guide"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:text="@string/Guide"
    android:textSize="20sp"
    android:onClick="buttonsClick"
    android:layout_marginTop="10dp"
    android:layout_gravity="center"
    android:background="@drawable/buttonstyle"/>
<Button
    android:id="@+id/btn_contact_us"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:text="@string/Contact"
    android:textSize="20sp"
    android:onClick="buttonsClick"
    android:layout_marginTop="10dp"
    android:layout_gravity="center"
    android:background="@drawable/buttonstyle"/>

</LinearLayout>