<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:visibility="visible"
    android:id="@+id/PlayerName_layout"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:id="@+id/PlayerName_layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="10dp">

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/please_enter_your_name"
            android:textSize="28sp" />

        <EditText
            android:id="@+id/edt_player_1"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/style1"
            android:gravity="center"
            android:hint="@string/player_1"
            android:textColor="#080808"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/edt_player_2"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edt_player_1"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/style1"
            android:gravity="center"
            android:hint="@string/player_2"
            android:textColor="#080808"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edt_player_2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:background="@drawable/buttonstyle"
            android:onClick="reset"
            android:paddingLeft="98dp"
            android:paddingRight="58dp"
            android:text="@string/start_game"
            android:textSize="25sp" />
    </RelativeLayout>
</RelativeLayout>